--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,14 +18,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.openurp.edu</groupId>
-      <artifactId>openurp-edu-web</artifactId>
-      <version>${openurp.edu.web.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openurp.edu</groupId>
-      <artifactId>openurp-edu-boot</artifactId>
-      <version>${openurp.edu.web.version}</version>
+      <groupId>org.openurp.starter</groupId>
+      <artifactId>openurp-starter-web</artifactId>
+      <version>${openurp.starter.version}</version>
     </dependency>
     <dependency>
       <groupId>org.beangle.ems</groupId>
