--- a/web/pom.xml
+++ b/web/pom.xml
@@ -32,6 +32,11 @@
       <version>${openurp.api.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.openurp.base</groupId>
+      <artifactId>openurp-base-tag</artifactId>
+      <version>${openurp.base.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.openurp.edu</groupId>
       <artifactId>openurp-edu-api</artifactId>
       <version>${openurp.api.version}</version>
